--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -184,6 +184,10 @@
     <Compile Include="Migrations\201609200335301_25.Designer.cs">
       <DependentUpon>201609200335301_25.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609260900449_26.cs" />
+    <Compile Include="Migrations\201609260900449_26.Designer.cs">
+      <DependentUpon>201609260900449_26.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -276,6 +280,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609200335301_25.resx">
       <DependentUpon>201609200335301_25.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609260900449_26.resx">
+      <DependentUpon>201609260900449_26.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
