--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -208,10 +208,10 @@
     <Compile Include="UI\Common\_dialogProgressPanel.Designer.cs">
       <DependentUpon>_dialogProgressPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Finance\FrmDeliveryImport.cs">
+    <Compile Include="UI\Function\DataImport\FrmDeliveryImport.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Finance\FrmDeliveryImport.Designer.cs">
+    <Compile Include="UI\Function\DataImport\FrmDeliveryImport.Designer.cs">
       <DependentUpon>FrmDeliveryImport.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Function\DataImport\_dialogImportDataTemplate.cs">
@@ -447,7 +447,7 @@
     <EmbeddedResource Include="UI\Common\_dialogProgressPanel.resx">
       <DependentUpon>_dialogProgressPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Finance\FrmDeliveryImport.resx">
+    <EmbeddedResource Include="UI\Function\DataImport\FrmDeliveryImport.resx">
       <DependentUpon>FrmDeliveryImport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Function\DataImport\_dialogImportDataTemplate.resx">
