--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -408,6 +408,9 @@
     <Content Include="External\DailyTradeIdentification\Client.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="LayoutXml\FrmTradeDataVerify_Default.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="LayoutXml\_dialogVirtualRecord_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
