--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Models\StockInfoModel.cs" />
     <Compile Include="Models\TradeRecordModel.cs" />
     <Compile Include="Models\TradeRecordSearchModel.cs" />
+    <Compile Include="UI\Accounting\DataManage\FrmDeliveryManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Accounting\DataManage\FrmDeliveryManage.Designer.cs">
+      <DependentUpon>FrmDeliveryManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Accounting\DataManage\FrmTradeDataVerify.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -417,6 +423,9 @@
     <Content Include="LayoutXml\_dialogVirtualRecord_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="UI\Accounting\DataManage\FrmDeliveryManage.resx">
+      <DependentUpon>FrmDeliveryManage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Accounting\DataManage\FrmTradeDataVerify.resx">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
     </EmbeddedResource>
