--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -114,6 +114,10 @@
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.SqlServer.Types, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Microsoft.SqlServer.Types.12.0.0.0\Microsoft.SqlServer.Types.dll</HintPath>
@@ -260,6 +264,12 @@
     </Compile>
     <Compile Include="UI\Function\MarginTrading\_dialogAddMarginTrading.Designer.cs">
       <DependentUpon>_dialogAddMarginTrading.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Function\ReportExport\FrmInvestIncomeReportExport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Function\ReportExport\FrmInvestIncomeReportExport.Designer.cs">
+      <DependentUpon>FrmInvestIncomeReportExport.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Function\StatisticsReport\FrmAccountInvestIncomeFlow.cs">
       <SubType>Form</SubType>
@@ -485,6 +495,9 @@
     <EmbeddedResource Include="UI\Function\MarginTrading\_dialogAddMarginTrading.resx">
       <DependentUpon>_dialogAddMarginTrading.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Function\ReportExport\FrmInvestIncomeReportExport.resx">
+      <DependentUpon>FrmInvestIncomeReportExport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Function\StatisticsReport\FrmStockInvestIncomeSummary.resx">
       <DependentUpon>FrmStockInvestIncomeSummary.cs</DependentUpon>
     </EmbeddedResource>
@@ -691,6 +704,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
+    <Content Include="ReportTemplate\UserDailyProfitFlow\DayReport.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CustomControl\" />
@@ -1836,6 +1852,26 @@
       <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
