--- a/src/Presentation/CTM.Win/packages.config
+++ b/src/Presentation/CTM.Win/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="4.1.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
