--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -22,11 +22,12 @@
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
+    <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>http://10.10.10.2:8000/</InstallUrl>
     <ProductName>投资交易管理系统</ProductName>
     <PublisherName>N.C Group</PublisherName>
+    <MinimumRequiredVersion>1.0.3.12</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
@@ -175,6 +176,12 @@
     </Compile>
     <Compile Include="UI\Accounting\DataManage\FrmTradeDataVerify.Designer.cs">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Accounting\StatisticsReport\FrmDeliveryAccountInvestIncomeFlow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Accounting\StatisticsReport\FrmDeliveryAccountInvestIncomeFlow.Designer.cs">
+      <DependentUpon>FrmDeliveryAccountInvestIncomeFlow.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Admin\BaseData\FrmStock.cs">
       <SubType>Form</SubType>
@@ -346,7 +353,6 @@
     <Compile Include="Extensions\FormExtensions.cs" />
     <Compile Include="Infrastructure\DependencyRegistrar.cs" />
     <Compile Include="LoginInfo.cs" />
-    <Compile Include="Models\AccountInfoModel.cs" />
     <Compile Include="Models\DepartmentInfoModel.cs" />
     <Compile Include="Models\DictionaryInfoModel.cs" />
     <Compile Include="Models\StockPoolInfoModel.cs" />
@@ -438,6 +444,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Accounting\DataManage\FrmTradeDataVerify.resx">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Accounting\StatisticsReport\FrmDeliveryAccountInvestIncomeFlow.resx">
+      <DependentUpon>FrmDeliveryAccountInvestIncomeFlow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Admin\BaseData\FrmAccount.resx">
       <DependentUpon>FrmAccount.cs</DependentUpon>
