--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -19,7 +19,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
+     <add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=RG@Justno0b;" providerName="System.Data.SqlClient" />
     <add name="FinancialCenter" connectionString="Server=10.10.10.2\zb; DataBase=FinancialCenter; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
 
     <!--
