--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -62,6 +62,7 @@
     <Compile Include="CTMContext.cs" />
     <Compile Include="EfRepository.cs" />
     <Compile Include="IDbContext.cs" />
+    <Compile Include="Mapping\Account\AccountFundTransferMap.cs" />
     <Compile Include="Mapping\Account\AccountInfoMap.cs" />
     <Compile Include="Mapping\Account\AccountOperatorMap.cs" />
     <Compile Include="Mapping\MarginTrading\MarginTradingInfoMap.cs" />
@@ -84,6 +85,10 @@
     <Compile Include="Migrations\201610090510257_Initial.Designer.cs">
       <DependentUpon>201610090510257_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610120826264_001.cs" />
+    <Compile Include="Migrations\201610120826264_001.Designer.cs">
+      <DependentUpon>201610120826264_001.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -101,6 +106,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201610090510257_Initial.resx">
       <DependentUpon>201610090510257_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610120826264_001.resx">
+      <DependentUpon>201610120826264_001.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
