--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -31,7 +31,7 @@
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>17</ApplicationRevision>
+    <ApplicationRevision>18</ApplicationRevision>
     <ApplicationVersion>1.0.3.%2a</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -186,6 +186,12 @@
     </Compile>
     <Compile Include="UI\Accounting\DataManage\FrmTradeDataVerify.Designer.cs">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Accounting\StatisticsReport\FrmDayIncomeBrief.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Accounting\StatisticsReport\FrmDayIncomeBrief.Designer.cs">
+      <DependentUpon>FrmDayIncomeBrief.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Accounting\StatisticsReport\FrmDeliveryAccountInvestIncomeFlow.cs">
       <SubType>Form</SubType>
@@ -463,6 +469,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Accounting\DataManage\FrmTradeDataVerify.resx">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Accounting\StatisticsReport\FrmDayIncomeBrief.resx">
+      <DependentUpon>FrmDayIncomeBrief.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Accounting\StatisticsReport\FrmDeliveryAccountInvestIncomeFlow.resx">
       <DependentUpon>FrmDeliveryAccountInvestIncomeFlow.cs</DependentUpon>
