Add module [AccountInvestFundDetail]

--- a/src/Libraries/CTM.Services/CTM.Services.csproj
+++ b/src/Libraries/CTM.Services/CTM.Services.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MarginTrading\IMarginTradingService.cs" />
     <Compile Include="MarginTrading\MarginTradingEntity.cs" />
     <Compile Include="MarginTrading\MarginTradingService.cs" />
+    <Compile Include="StatisticsReport\AccountInvestFundEntity.cs" />
     <Compile Include="StatisticsReport\AccountInvestIncomeEntity.cs" />
     <Compile Include="StatisticsReport\DeliveryAccountInvestIncomeEntity.cs" />
     <Compile Include="StatisticsReport\DeliveryStatisticsReportService.cs" />
