--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -187,6 +187,12 @@
     <Compile Include="UI\Accounting\DataManage\FrmTradeDataVerify.Designer.cs">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Accounting\StatisticsReport\FrmAccountInvestFundDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Accounting\StatisticsReport\FrmAccountInvestFundDetail.Designer.cs">
+      <DependentUpon>FrmAccountInvestFundDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Accounting\StatisticsReport\FrmDayIncomeBrief.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -446,6 +452,9 @@
     <Content Include="LayoutXml\FrmAccountFundTransfer_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="LayoutXml\FrmAccountInvestFundDetail.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="LayoutXml\FrmDeliveryAccountInvestIncomeDetail_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -469,6 +478,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Accounting\DataManage\FrmTradeDataVerify.resx">
       <DependentUpon>FrmTradeDataVerify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Accounting\StatisticsReport\FrmAccountInvestFundDetail.resx">
+      <DependentUpon>FrmAccountInvestFundDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Accounting\StatisticsReport\FrmDayIncomeBrief.resx">
       <DependentUpon>FrmDayIncomeBrief.cs</DependentUpon>
