--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -68,6 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\Account\AccountInitialFund.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionCommittee.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionForm.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionVote.cs" />
     <Compile Include="Util\AppConfigHelper.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Util\CommonHelper.cs" />
