--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -66,6 +66,9 @@
     <Compile Include="Mapping\Account\AccountInfoMap.cs" />
     <Compile Include="Mapping\Account\AccountInitialFundMap.cs" />
     <Compile Include="Mapping\Account\AccountOperatorMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionCommitteeMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionFormMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionVoteMap.cs" />
     <Compile Include="Mapping\MarginTrading\MarginTradingInfoMap.cs" />
     <Compile Include="Mapping\Stock\StockPoolLogMap.cs" />
     <Compile Include="Mapping\Stock\StockTransferInfoMap.cs" />
@@ -90,6 +93,10 @@
     <Compile Include="Migrations\201610130245013_001.Designer.cs">
       <DependentUpon>201610130245013_001.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610180819249_002.cs" />
+    <Compile Include="Migrations\201610180819249_002.Designer.cs">
+      <DependentUpon>201610180819249_002.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -110,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610130245013_001.resx">
       <DependentUpon>201610130245013_001.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610180819249_002.resx">
+      <DependentUpon>201610180819249_002.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
