--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -97,6 +97,10 @@
     <Compile Include="Migrations\201610180819249_002.Designer.cs">
       <DependentUpon>201610180819249_002.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610190626241_003.cs" />
+    <Compile Include="Migrations\201610190626241_003.Designer.cs">
+      <DependentUpon>201610190626241_003.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -120,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610180819249_002.resx">
       <DependentUpon>201610180819249_002.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610190626241_003.resx">
+      <DependentUpon>201610190626241_003.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
