--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -105,6 +105,14 @@
     <Compile Include="Migrations\201610190812116_004.Designer.cs">
       <DependentUpon>201610190812116_004.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610200218271_005.cs" />
+    <Compile Include="Migrations\201610200218271_005.Designer.cs">
+      <DependentUpon>201610200218271_005.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610200521593_006.cs" />
+    <Compile Include="Migrations\201610200521593_006.Designer.cs">
+      <DependentUpon>201610200521593_006.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -134,6 +142,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610190812116_004.resx">
       <DependentUpon>201610190812116_004.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610200218271_005.resx">
+      <DependentUpon>201610200218271_005.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610200521593_006.resx">
+      <DependentUpon>201610200521593_006.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
