add module [IDVoteResult]

--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -113,6 +113,10 @@
     <Compile Include="Migrations\201610200521593_006.Designer.cs">
       <DependentUpon>201610200521593_006.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610200810386_007.cs" />
+    <Compile Include="Migrations\201610200810386_007.Designer.cs">
+      <DependentUpon>201610200810386_007.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -148,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610200521593_006.resx">
       <DependentUpon>201610200521593_006.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610200810386_007.resx">
+      <DependentUpon>201610200810386_007.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
